--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,6 @@
 {
   "tasks": {
-    "day1": "deno run day-1/index.ts"
+    "day1": "deno run --allow-read day-1/index.ts"
   },
   "imports": {
     "@std/assert": "jsr:@std/assert@1"
